[dependencies]
getopts = "0.2.24"

[package]
name = "hilite"
version = "1.1.0"
authors = ["greg <greg.shuflin@gmail.com>"]
edition = "2024"

description = "A simple command-line utility that highlights stderr output"
homepage = " https://github.com/neunenak/hilite"
readme = "README"

keywords = ["highlight", "hilite"]
license = "BSD-3-Clause"
